@@ -1,6 +1,7 @@
 /* 
    This file is part of GNU Sqltutor
-   Copyright (C) 2008  Ales Cepek <cepek@gnu.org>
+   Copyright (C) 2008  Free Software Foundation, Inc.
+   Contributed by Ales Cepek <cepek@gnu.org>
  
    GNU Sqltutor is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
