@@ -1,3 +1,7 @@
+2009-04-01  Ales Cepek  <cepek@amonit.fsv.cvut.cz>
+
+	* copyright assigned to FSF
+
 2009-02-20  Ales Cepek  <cepek@gnu.org>
 
 	* in HTML all colspan='0' replaced by explicit values
